Cleaned up color definitions

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,15 +1,14 @@
 // COLORS
-$primary-color: #94b8ff;
-$secondary-color: #9ccfd8;
+$blue-v1: #94b8ff;
+$blue-v2: #9ccfd8;
 
 $white-color: #232138;
-$purple-color: #a78bfa;
-// $red-color: #ee8679;
+$blue-color: #9ccfd8;
 
 $dark-grey: #333333;
 $light-grey: #d2d2d2;
 
-$dark-blue-text: #d3d2e7; // For Headings
+$header-text: #d3d2e7;
 
 // FONT SIZE
 $default-font-size: 1.6rem;
