--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -7,7 +7,7 @@
   background: $white-color;
 
   font-weight: 400;
-  color: $dark-blue-text;
+  color: $header-text;
   padding: 0rem 5.6rem;
   margin-bottom: 0;
   top: 0;
