--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -35,7 +35,7 @@ a:hover {
 }
 
 .dark-blue-text {
-  color: $dark-blue-text !important;
+  color: $header-text !important;
 }
 
 .text-color-main {
@@ -44,7 +44,7 @@ a:hover {
   // Responsive text purple style
   @include respond(phone) {
     background-image: none;
-    -webkit-text-fill-color: $purple-color;
+    -webkit-text-fill-color: $blue-v2;
   }
 
   &:hover {
