--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -25,11 +25,11 @@
 .cta-btn--hero {
   @include supportColorForIE11();
   border: 2px solid transparent;
-  border-image: linear-gradient(62deg, $purple-color 0%, $purple-color 100%);
+  border-image: linear-gradient(62deg, $blue-v2 0%, $blue-v2 100%);
 
   border-image-slice: 1;
   @include supportIE11() {
-    color: $secondary-color !important;
+    color: $blue-v2 !important;
     &:hover {
       color: $white-color !important;
     }
@@ -37,16 +37,12 @@
 
   @include respond(phone) {
     background-image: none;
-    border: 2px solid $purple-color;
-    -webkit-text-fill-color: #9ccfd8;
+    border: 2px solid $blue-v2;
+    -webkit-text-fill-color: $blue-v2;
   }
 
   &::after {
-    background-image: linear-gradient(
-      62deg,
-      $purple-color 0%,
-      $purple-color 100%
-    );
+    background-image: linear-gradient(62deg, $blue-v2 0%, $blue-v2 100%);
 
     @include respond(phone) {
       background-image: none;
@@ -58,7 +54,7 @@
     text-decoration: none;
 
     @include respond(phone) {
-      -webkit-text-fill-color: $purple-color;
+      -webkit-text-fill-color: $blue-v2;
     }
 
     &::after {
@@ -70,14 +66,14 @@
 /* Resume Style */
 .cta-btn--resume {
   color: $white-color;
-  background: $dark-blue-text;
+  background: $header-text;
 
   &::after {
     background: $white-color;
   }
 
   &:hover {
-    color: $primary-color;
+    color: $blue-v1;
     text-decoration: none;
 
     &::after {
@@ -89,7 +85,7 @@
 /* Projects Style */
 .cta-btn--projects {
   color: $white-color;
-  background: $dark-blue-text;
+  background: $header-text;
   border: none;
 
   &::after {
@@ -97,7 +93,7 @@
   }
 
   &:hover {
-    color: $primary-color;
+    color: $blue-v1;
     text-decoration: none;
 
     &::after {
@@ -122,7 +118,7 @@
   border: 2px solid transparent;
   border-image: linear-gradient(62deg, $white-color 0%, $white-color 100%);
   border-image-slice: 1;
-  color: $dark-blue-text;
+  color: $header-text;
 
   &::after {
     content: "";
@@ -156,7 +152,7 @@
   line-height: 1;
   z-index: 1;
   transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.6s;
-  color: $dark-blue-text;
+  color: $header-text;
 
   &::after {
     content: "";
@@ -177,7 +173,7 @@
 
   @include respond(phone) {
     background-image: none;
-    -webkit-text-fill-color: $secondary-color;
+    -webkit-text-fill-color: $blue-v2;
   }
 
   &.cta-btn--hero {
@@ -199,7 +195,7 @@
       text-decoration: none;
 
       @include respond(phone) {
-        -webkit-text-fill-color: $purple-color;
+        -webkit-text-fill-color: $blue-v2;
       }
 
       &::after {
