--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -10,7 +10,7 @@
 
   &__text {
     // color: darken($white-color, 50%);
-    color: $dark-blue-text;
+    color: $header-text;
     font-size: 1.3rem;
 
     a {
