--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -1,9 +1,9 @@
 #about {
-  // background-color: $primary-color;
+  // background-color: $blue-v1;
   // background-image: linear-gradient(
   //   62deg,
-  //   $primary-color 0%,
-  //   $secondary-color 100%
+  //   $blue-v1 0%,
+  //   $blue-v2 100%
   // );
   background: #514d7d46;
   height: auto;
@@ -61,7 +61,7 @@
         }
 
         &--important {
-          background: darken($secondary-color, 1%);
+          background: darken($blue-v2, 1%);
           display: inline-block;
           font-style: italic;
           padding: 0 0.3rem;
