--- a/src/sass/sections/_contact.scss
+++ b/src/sass/sections/_contact.scss
@@ -1,10 +1,10 @@
 #contact {
   background: #514d7d46;
-  color: $dark-blue-text;
+  color: $header-text;
   // background-image: linear-gradient(
   //   62deg,
-  //   $primary-color 0%,
-  //   $secondary-color 100%
+  //   $blue-v1 0%,
+  //   $blue-v2 100%
   // );
   -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
