--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -2,8 +2,8 @@
 $blue-v1: #94b8ff;
 $blue-v2: #9ccfd8;
 
-$white-color: #232138;
-$blue-color: #9ccfd8;
+$background-color: #232138;
+$purple-color: #a78bfa;
 
 $dark-grey: #333333;
 $light-grey: #d2d2d2;
