--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -60,10 +60,14 @@ ORDER: Base + Typography > Generar Layout + Grid > Page Layout > Components
 
 @mixin supportColorForIE11 {
   // Fall for text-gradient not supported in IE11
-  color: $blue-v2;
-  -webkit-text-fill-color: $blue-v2; // fallback
+  color: $purple-color;
+  -webkit-text-fill-color: $purple-color; // fallback
   @supports (-webkit-background-clip: text) or (background-clip: text) {
-    background-image: linear-gradient(62deg, $blue-v2 0%, $blue-v2 100%);
+    background-image: linear-gradient(
+      62deg,
+      $purple-color 0%,
+      $purple-color 100%
+    );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     color: transparent;
