--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -44,7 +44,7 @@ a:hover {
   // Responsive text purple style
   @include respond(phone) {
     background-image: none;
-    -webkit-text-fill-color: $blue-v2;
+    -webkit-text-fill-color: $purple-color;
   }
 
   &:hover {
