--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -7,15 +7,16 @@
   line-height: 1;
   z-index: 1;
   transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.6s;
+  border-radius: 0.3rem;
 
   & i {
     opacity: 0;
-    transition: opacity 0.15s;
   }
 
   &:hover {
     & i {
       opacity: 1;
+      transition: opacity 0.16s;
     }
   }
 
@@ -36,24 +37,28 @@
 .cta-btn--hero {
   @include supportColorForIE11();
   border: 2px solid transparent;
-  border-image: linear-gradient(62deg, $blue-v2 0%, $blue-v2 100%);
+  border-image: linear-gradient(62deg, $purple-color 0%, $purple-color 100%);
 
   border-image-slice: 1;
   @include supportIE11() {
-    color: $blue-v2 !important;
+    color: $purple-color !important;
     &:hover {
-      color: $white-color !important;
+      color: $background-color !important;
     }
   }
 
   @include respond(phone) {
     background-image: none;
-    border: 2px solid $blue-v2;
-    -webkit-text-fill-color: $blue-v2;
+    border: 2px solid $purple-color;
+    -webkit-text-fill-color: $purple-color;
   }
 
   &::after {
-    background-image: linear-gradient(62deg, $blue-v2 0%, $blue-v2 100%);
+    background-image: linear-gradient(
+      62deg,
+      $purple-color 0%,
+      $purple-color 100%
+    );
 
     @include respond(phone) {
       background-image: none;
@@ -65,7 +70,7 @@
     text-decoration: none;
 
     @include respond(phone) {
-      -webkit-text-fill-color: $blue-v2;
+      -webkit-text-fill-color: $purple-color;
     }
 
     &::after {
@@ -76,11 +81,12 @@
 
 /* Resume Style */
 .cta-btn--resume {
-  color: $white-color;
+  color: $background-color;
   background: $header-text;
+  padding: 1rem 1.5rem;
 
   &::after {
-    background: $white-color;
+    background: $background-color;
   }
 
   &:hover {
@@ -95,12 +101,12 @@
 
 /* Projects Style */
 .cta-btn--projects {
-  color: $white-color;
+  color: $background-color;
   background: $header-text;
-  border: none;
+  padding: 1rem 1.5rem;
 
   &::after {
-    background: $white-color;
+    background: $background-color;
   }
 
   &:hover {
@@ -122,7 +128,11 @@
   z-index: 1;
   transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.6s;
   border: 2px solid transparent;
-  border-image: linear-gradient(62deg, $white-color 0%, $white-color 100%);
+  border-image: linear-gradient(
+    62deg,
+    $background-color 0%,
+    $background-color 100%
+  );
   border-image-slice: 1;
   color: $header-text;
 
@@ -188,20 +198,24 @@
 
   @include respond(phone) {
     background-image: none;
-    -webkit-text-fill-color: $blue-v2;
+    -webkit-text-fill-color: $purple-color;
   }
 
   &.cta-btn--hero {
     @include supportColorForIE11();
     border: 2px solid transparent;
-    border-image: linear-gradient(62deg, $white-color 0%, $white-color 100%);
+    border-image: linear-gradient(
+      62deg,
+      $background-color 0%,
+      $background-color 100%
+    );
     border-image-slice: 1;
 
     &::after {
       background-image: linear-gradient(
         62deg,
-        $white-color 0%,
-        $white-color 100%
+        $background-color 0%,
+        $background-color 100%
       );
     }
 
@@ -210,7 +224,7 @@
       text-decoration: none;
 
       @include respond(phone) {
-        -webkit-text-fill-color: $blue-v2;
+        -webkit-text-fill-color: $purple-color;
       }
 
       &::after {
