--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   // background-color: $dark-grey;
   background: #222037;
-  color: $white-color;
+  color: $background-color;
   padding: 4.8rem 0;
 
   @include respond(phone) {
@@ -9,7 +9,7 @@
   }
 
   &__text {
-    // color: darken($white-color, 50%);
+    // color: darken($background-color, 50%);
     color: $header-text;
     font-size: 1.3rem;
 
@@ -51,7 +51,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    color: $white-color;
+    color: $background-color;
     font-size: 3rem;
     width: 5rem;
     height: 5rem;
@@ -65,7 +65,7 @@
 }
 
 .back-to-top i {
-  // color: $white-color;
+  // color: $background-color;
   color: #f8d2c9;
   margin: 1rem 0 $default-font-size;
   transition: all 0.2s ease-in;
