--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -3,7 +3,7 @@
   // background-image: linear-gradient(
   //   62deg,
   //   $blue-v1 0%,
-  //   $blue-v2 100%
+  //   $purple-color 100%
   // );
   background: #514d7d46;
   height: auto;
@@ -61,7 +61,7 @@
         }
 
         &--important {
-          background: darken($blue-v2, 1%);
+          background: darken($purple-color, 1%);
           display: inline-block;
           font-style: italic;
           padding: 0 0.3rem;
