--- a/src/sass/sections/_contact.scss
+++ b/src/sass/sections/_contact.scss
@@ -4,14 +4,14 @@
   // background-image: linear-gradient(
   //   62deg,
   //   $blue-v1 0%,
-  //   $blue-v2 100%
+  //   $purple-color 100%
   // );
   -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   padding: 15rem 0 10rem 0;
   margin-top: -10rem;
   margin-bottom: -1px;
-  // color: $white-color;
+  // color: $background-color;
 
   @include respond(tab-land) {
     padding: 10rem 0;
