--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -22,9 +22,11 @@
     margin-left: 1rem;
     margin-bottom: 1.2rem;
     transition: all 0.2s ease-in-out;
+    opacity: 0.8;
 
     &:hover {
-      transform: scale(1.08);
+      transform: scale(1.02);
+      opacity: 1;
     }
   }
 
@@ -157,12 +159,11 @@
   .notable-mentions-list {
     list-style: none;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     grid-gap: 2rem;
-    padding-bottom: 10rem;
-    padding-top: 2.5rem;
-    padding-right: 2rem;
+    padding: 2.5rem;
     justify-content: center;
+    padding-bottom: 12rem;
   }
 
   .card-buttons a {
@@ -174,31 +175,32 @@
   }
 
   .card {
-    // background: #fff;
     background: #514d7d46;
     color: $header-text;
     border-radius: 10px;
     padding: 1rem;
     text-align: center;
     height: 100%;
-    margin: 0 auto; /* Add this line */
+    margin: 0 auto;
     position: relative;
     overflow: hidden;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    max-width: 375px;
-  }
+    max-width: 425px;
+    width: 100%;
+    margin-bottom: 3rem;
 
-  .card h1 {
-    font-size: 2.5rem;
-    margin-bottom: 1.5rem;
-    transition: all 0.2s ease-in-out;
-    color: $header-text;
-  }
+    & h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1.5rem;
+      transition: all 0.2s ease-in-out;
+      color: $header-text;
+    }
 
-  .card p {
-    font-size: 1.6rem;
-    margin-top: 2rem;
-    margin-bottom: 5rem;
+    & p {
+      font-size: 1.6rem;
+      margin-top: 2rem;
+      margin-bottom: 5rem;
+    }
   }
 
   .card-buttons {
@@ -232,15 +234,16 @@
     color: $blue-v2;
     opacity: 0.8;
     transition: all 0.3s ease-in-out;
+    opacity: 1;
 
     &:hover {
-      opacity: 1;
+      opacity: 0.8;
     }
   }
 
   @include respond(phone) {
     .notable-mentions-list {
-      grid-gap: 4rem;
+      grid-gap: 2.5rem;
     }
   }
 }
