temp extended bio

--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -11,7 +11,7 @@
   border-top: 0px;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-  padding-bottom: 10%;
+  padding-bottom: 20rem;
 
   @include respond(tab-land) {
     height: 100%;
@@ -57,7 +57,7 @@
         }
         @include respond(tab-port-sm) {
           text-align: center;
-          margin-bottom: 1rem;
+          margin-bottom: 4rem;
         }
 
         &--important {
