--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -30,10 +30,6 @@
     }
   }
 
-  hr {
-    margin-top: 9rem;
-  }
-
   @include respond(tab-land) {
     margin-top: 0;
     padding-top: 5rem;
@@ -72,6 +68,7 @@
 
         @include respond(phone) {
           font-size: 2rem;
+          margin-top: 0;
         }
       }
 
@@ -119,8 +116,7 @@
   .project-group-title {
     position: relative;
     font-size: 4rem;
-    padding-top: 4rem;
-    padding-bottom: 9rem;
+    padding-bottom: 5rem;
     text-align: left;
     display: flex;
 
@@ -141,6 +137,7 @@
       height: 2px;
       width: 100%;
       background-color: $header-text;
+      opacity: 0.7;
     }
 
     & img {
@@ -159,11 +156,17 @@
   .notable-mentions-list {
     list-style: none;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
     grid-gap: 2rem;
     padding: 2.5rem;
     justify-content: center;
     padding-bottom: 12rem;
+    margin-right: 12rem;
+    margin-left: 12rem;
+
+    @respond (phone) {
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    }
   }
 
   .card-buttons a {
@@ -246,4 +249,8 @@
       grid-gap: 2.5rem;
     }
   }
+}
+
+.spacer {
+  margin-top: 8.4rem;
 }
