--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -28,6 +28,7 @@ a:hover {
   font-size: $big-font-size;
   font-weight: bold;
   text-transform: uppercase;
+  padding-top: 2rem;
 
   @include respond(phone) {
     font-size: 2.8rem;
