--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -156,15 +156,15 @@
   .notable-mentions-list {
     list-style: none;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
     grid-gap: 2rem;
     padding: 2.5rem;
     justify-content: center;
     padding-bottom: 12rem;
-    margin-right: 12rem;
-    margin-left: 12rem;
+    max-width: 1600px;
+    margin: 0 auto;
 
-    @respond (phone) {
+    @media (max-width: 900px) {
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     }
   }
@@ -180,7 +180,7 @@
   .card {
     background: #514d7d46;
     color: $header-text;
-    border-radius: 10px;
+    border-radius: 5px;
     padding: 1rem;
     text-align: center;
     height: 100%;
@@ -188,15 +188,16 @@
     position: relative;
     overflow: hidden;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    max-width: 425px;
+    max-width: 360px;
     width: 100%;
     margin-bottom: 3rem;
 
     & h1 {
       font-size: 2.5rem;
-      margin-bottom: 1.5rem;
+      margin-bottom: 1.3rem;
       transition: all 0.2s ease-in-out;
       color: $header-text;
+      text-align: center;
     }
 
     & p {
@@ -222,9 +223,10 @@
     width: 100%;
     max-width: 100%;
     height: 210px;
-    border-radius: 10px;
+    border-radius: 4px;
     object-fit: cover;
     transition: all 0.2s ease-in-out;
+    margin-bottom: 2rem;
 
     &:hover {
       opacity: 0.8;
