--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -2,13 +2,15 @@
 $blue-v1: #94b8ff;
 $blue-v2: #9ccfd8;
 
-$background-color: #232138;
-$purple-color: #a78bfa;
+// $background-color: #232138;
+$mint-color: #a3d9cc;
+// $purple-color: #a78bfa;
+$background-color: #121212;
 
 $dark-grey: #333333;
 $light-grey: #d2d2d2;
 
-$header-text: #d3d2e7;
+$header-text: #e5e4e2;
 
 // FONT SIZE
 $default-font-size: 1.6rem;
