--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -9,7 +9,8 @@ html {
 body {
   font-family: "Montserrat", sans-serif;
   text-align: center;
-  background: #222037;
+  // background: #222037;
+  background: $background-color;
 }
 
 *,
