--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -60,14 +60,10 @@ ORDER: Base + Typography > Generar Layout + Grid > Page Layout > Components
 
 @mixin supportColorForIE11 {
   // Fall for text-gradient not supported in IE11
-  color: $purple-color;
-  -webkit-text-fill-color: $purple-color; // fallback
+  color: $mint-color;
+  -webkit-text-fill-color: $mint-color; // fallback
   @supports (-webkit-background-clip: text) or (background-clip: text) {
-    background-image: linear-gradient(
-      62deg,
-      $purple-color 0%,
-      $purple-color 100%
-    );
+    background-image: linear-gradient(62deg, $mint-color 0%, $mint-color 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     color: transparent;
