--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -35,11 +35,11 @@
 .cta-btn--hero {
   @include supportColorForIE11();
   border: 2px solid transparent;
-  border-image: linear-gradient(62deg, $purple-color 0%, $purple-color 100%);
+  border-image: linear-gradient(62deg, $mint-color 0%, $mint-color 100%);
 
   border-image-slice: 1;
   @include supportIE11() {
-    color: $purple-color !important;
+    color: $mint-color !important;
     &:hover {
       color: $background-color !important;
     }
@@ -47,16 +47,12 @@
 
   @include respond(phone) {
     background-image: none;
-    border: 2px solid $purple-color;
-    -webkit-text-fill-color: $purple-color;
+    border: 2px solid $mint-color;
+    -webkit-text-fill-color: $mint-color;
   }
 
   &::after {
-    background-image: linear-gradient(
-      62deg,
-      $purple-color 0%,
-      $purple-color 100%
-    );
+    background-image: linear-gradient(62deg, $mint-color 0%, $mint-color 100%);
 
     @include respond(phone) {
       background-image: none;
@@ -68,7 +64,7 @@
     text-decoration: none;
 
     @include respond(phone) {
-      -webkit-text-fill-color: $purple-color;
+      -webkit-text-fill-color: $mint-color;
     }
 
     &::after {
@@ -83,11 +79,12 @@
   padding: 1rem 1.5rem;
 
   &::after {
-    background: $background-color;
+    background: $mint-color;
+    border-radius: 0.3rem;
   }
 
   &:hover {
-    color: $blue-v1;
+    color: $background-color;
     text-decoration: none;
 
     &::after {
@@ -102,11 +99,12 @@
   padding: 1rem 1.5rem;
 
   &::after {
-    background: $background-color;
+    background: $mint-color;
+    border-radius: 0.3rem;
   }
 
   &:hover {
-    color: $blue-v1;
+    color: $background-color;
     text-decoration: none;
 
     &::after {
@@ -142,11 +140,15 @@
     bottom: 0;
     z-index: -1;
     transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.3s;
-    background-image: linear-gradient(62deg, #222037 0%, #222037 100%);
+    background-image: linear-gradient(
+      62deg,
+      $background-color,
+      $background-color 100%
+    );
   }
 
   &:hover {
-    -webkit-text-fill-color: #ffffff;
+    -webkit-text-fill-color: $mint-color;
     text-decoration: none;
     color: #ffffff;
 
@@ -185,7 +187,7 @@
 
   &:hover {
     transform: translateX(2px);
-    color: #ffffff;
+    color: $mint-color;
 
     & i {
       opacity: 1;
@@ -220,7 +222,7 @@
       text-decoration: none;
 
       @include respond(phone) {
-        -webkit-text-fill-color: $purple-color;
+        -webkit-text-fill-color: $mint-color;
       }
 
       &::after {
