--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -3,11 +3,12 @@
   // background-image: linear-gradient(
   //   62deg,
   //   $blue-v1 0%,
-  //   $purple-color 100%
+  //   $mint-color 100%
   // );
-  background: #514d7d46;
+  background: #171717;
+  // background: #514d7d46;
   height: auto;
-  color: #d3d2e7;
+  color: $header-text;
   border-top: 0px;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
@@ -20,7 +21,7 @@
   }
 
   .about-wrapper {
-    @include respond(phone) {
+    @include respond(pone) {
       padding-bottom: 5rem;
     }
 
@@ -61,7 +62,7 @@
         }
 
         &--important {
-          background: darken($purple-color, 1%);
+          background: darken($mint-color, 1%);
           display: inline-block;
           font-style: italic;
           padding: 0 0.3rem;
