--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -1,8 +1,15 @@
 #projects {
   background-color: $background-color;
   color: $header-text;
-  margin-top: -10rem;
-  padding-top: 15rem;
+  padding-top: 10rem;
+
+  hr {
+    margin: 1rem auto;
+    border: 0;
+    border-top: 2px solid #686868a8;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+  }
 
   .react-icon {
     width: 3.8rem;
@@ -73,7 +80,7 @@
       }
 
       & p > a {
-        color: $purple-color;
+        color: $mint-color;
       }
     }
 
@@ -178,19 +185,25 @@
   }
 
   .card {
-    background: #514d7d46;
-    color: $header-text;
-    border-radius: 5px;
+    background: linear-gradient(135deg, #1f1f1f, #1c1c1c);
+    color: #ffffff;
     padding: 1rem;
-    text-align: center;
     height: 100%;
     margin: 0 auto;
     position: relative;
     overflow: hidden;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.6);
     max-width: 360px;
     width: 100%;
     margin-bottom: 3rem;
+    border: 2px solid;
+    border-image: linear-gradient(135deg, #2c2c2c, #2b2b2b);
+    border-image-slice: 1;
+    transition: all 0.4s ease-in-out;
+
+    &:hover {
+      transform: scale(1.02);
+    }
 
     & h1 {
       font-size: 2.5rem;
@@ -231,18 +244,6 @@
     &:hover {
       opacity: 0.8;
       transform: scale(1.01);
-    }
-  }
-
-  .project-desc-link {
-    font-size: 1.5rem;
-    color: $blue-v2;
-    opacity: 0.8;
-    transition: all 0.3s ease-in-out;
-    opacity: 1;
-
-    &:hover {
-      opacity: 0.8;
     }
   }
 
