--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -185,7 +185,7 @@
   }
 
   .card {
-    background: linear-gradient(135deg, #1f1f1f, #1c1c1c);
+    background: linear-gradient(135deg, #111111, #1a1a1a, #111111);
     color: #ffffff;
     padding: 1rem;
     height: 100%;
