--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -73,16 +73,16 @@
 }
 
 .cta-btn--resume {
-  color: $background-color;
-  background: $header-text;
+  color: #fff;
+  background: #393939;
   padding: 1rem 1.5rem;
 
   &::after {
-    background: $mint-color;
+    background: #2a2a2a;
   }
 
   &:hover {
-    color: #fff;
+    color: #cdcdcd;
     text-decoration: none;
 
     &::after {
@@ -92,16 +92,16 @@
 }
 
 .cta-btn--projects {
-  color: $background-color;
-  background: $header-text;
+  color: #fff;
+  background: #393939;
   padding: 1rem 1.5rem;
 
   &::after {
-    background: $mint-color;
+    background: #2a2a2a;
   }
 
   &:hover {
-    color: #fff;
+    color: #cdcdcd;
     text-decoration: none;
 
     &::after {
