--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -82,7 +82,7 @@
   }
 
   &:hover {
-    color: #cdcdcd;
+    color: #e0e0e0;
     text-decoration: none;
 
     &::after {
@@ -101,7 +101,7 @@
   }
 
   &:hover {
-    color: #cdcdcd;
+    color: #e0e0e0;
     text-decoration: none;
 
     &::after {
