--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -59,7 +59,7 @@
   }
 
   &:hover {
-    -webkit-text-fill-color: #fff;
+    -webkit-text-fill-color: #ffffff;
     text-decoration: none;
 
     @include respond(phone) {
