--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -3,12 +3,12 @@ $blue-v1: #94b8ff;
 $blue-v2: #9ccfd8;
 
 $mint-color: #a3d9cc;
-$background-color: #121212;
+$background-color: #18181c;
 
 $dark-grey: #333333;
 $light-grey: #d2d2d2;
 
-$header-text: #e5e4e2;
+$header-text: #f2f2f2;
 
 // FONT SIZE
 $default-font-size: 1.6rem;
