--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -66,8 +66,8 @@
 }
 
 .back-to-top i {
-  // color: $background-color;
-  color: #f8d2c9;
+  color: $mint-color;
+  // color: #f8d2c9;
   margin: 1rem 0 $default-font-size;
   transition: all 0.2s ease-in;
 
