--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -5,7 +5,7 @@
   //   $blue-v1 0%,
   //   $mint-color 100%
   // );
-  background: #171717;
+  background: #121214;
   // background: #514d7d46;
   height: auto;
   color: $header-text;
@@ -13,6 +13,10 @@
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   padding-bottom: 20rem;
+
+  p {
+    color: #a1a1aa;
+  }
 
   @include respond(tab-land) {
     height: 100%;
