--- a/src/sass/sections/_contact.scss
+++ b/src/sass/sections/_contact.scss
@@ -1,6 +1,6 @@
 #contact {
   // background: #514d7d46;
-  background: #171717;
+  background: #121214;
   color: $header-text;
   // background-image: linear-gradient(
   //   62deg,
@@ -12,6 +12,10 @@
   padding: 15rem 0 10rem 0;
   margin-top: -10rem;
   margin-bottom: -1px;
+
+  p {
+    color: #a1a1aa;
+  }
 
   @include respond(tab-land) {
     padding: 10rem 0;
