--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -2,7 +2,7 @@
 $blue-v1: #94b8ff;
 $blue-v2: #9ccfd8;
 
-$mint-color: #a3d9cc;
+$mint-color: #77a093;
 $background-color: #18181c;
 
 $dark-grey: #333333;
