--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -12,7 +12,8 @@
   border-top: 0px;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-  padding-bottom: 28rem;
+  padding-bottom: 33rem;
+  padding-top: 8rem;
 
   p {
     color: #a1a1aa;
