--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -189,9 +189,7 @@
   }
 
   .card {
-    // background: linear-gradient(135deg, #111111, #1a1a1a, #111111);
-    background: transparent;
-    color: #ffffff;
+    background: #19191d;
     padding: 1rem;
     height: 100%;
     margin: 0 auto;
