--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,14 +1,12 @@
 // COLORS
-$blue-v1: #94b8ff;
-$blue-v2: #9ccfd8;
 
-$mint-color: #77a093;
-$background-color: #18181c;
+$accent-color: #a68bfc;
+$background-color: #14012a;
 
 $dark-grey: #333333;
 $light-grey: #d2d2d2;
 
-$header-text: #f2f2f2;
+$header-text: #fffdf7;
 
 // FONT SIZE
 $default-font-size: 1.6rem;
