--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -2,15 +2,11 @@
   display: inline-block;
   position: relative;
   padding: 0.8rem $default-font-size;
-  font-weight: bold;
+  font-weight: 400;
   line-height: 1;
   z-index: 1;
   transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.6s;
   border-radius: 0.5rem;
-
-  & i {
-    opacity: 0;
-  }
 
   &:hover {
     & i {
@@ -18,6 +14,10 @@
       transition: opacity 0.16s;
     }
     border-radius: 0.5rem;
+  }
+
+  & i {
+    opacity: 0;
   }
 
   &::after {
@@ -36,11 +36,11 @@
 .cta-btn--hero {
   @include supportColorForIE11();
   border: 2px solid transparent;
-  border-image: linear-gradient(62deg, $mint-color 0%, $mint-color 100%);
+  border-image: linear-gradient(62deg, $accent-color 0%, $accent-color 100%);
 
   border-image-slice: 1;
   @include supportIE11() {
-    color: $mint-color !important;
+    color: $accent-color !important;
     &:hover {
       color: $background-color !important;
     }
@@ -48,12 +48,16 @@
 
   @include respond(phone) {
     background-image: none;
-    border: 2px solid $mint-color;
-    -webkit-text-fill-color: $mint-color;
+    border: 2px solid $accent-color;
+    -webkit-text-fill-color: $accent-color;
   }
 
   &::after {
-    background-image: linear-gradient(62deg, $mint-color 0%, $mint-color 100%);
+    background-image: linear-gradient(
+      62deg,
+      $accent-color 0%,
+      $accent-color 100%
+    );
 
     @include respond(phone) {
       background-image: none;
@@ -65,7 +69,7 @@
     text-decoration: none;
 
     @include respond(phone) {
-      -webkit-text-fill-color: $mint-color;
+      -webkit-text-fill-color: $accent-color;
     }
 
     &::after {
@@ -75,19 +79,18 @@
 }
 
 .cta-btn--resume {
-  color: $header-text;
-  background: #242427;
+  color: #fff;
+  background: #472f7a;
   padding: 1rem 1.5rem;
   border-radius: 0.5rem;
 
   &::after {
-    // background: #2a2a2a;
     opacity: 0.8;
     border-radius: 0.5rem;
   }
 
   &:hover {
-    color: #e0e0e0;
+    color: #ededed;
     opacity: 0.8;
     text-decoration: none;
 
@@ -98,19 +101,18 @@
 }
 
 .cta-btn--projects {
-  color: $header-text;
-  background: #242427;
+  color: #fff;
+  background: #472f7a;
   padding: 1rem 1.5rem;
   border-radius: 0.5rem;
 
   &::after {
-    // background: #2a2a2a;
     opacity: 0.8;
     border-radius: 0.5rem;
   }
 
   &:hover {
-    color: #e0e0e0;
+    color: #ededed;
     opacity: 0.8;
     text-decoration: none;
 
@@ -128,7 +130,6 @@
   line-height: 1;
   z-index: 1;
   border: 2px solid transparent;
-  // border-image: linear-gradient(62deg, $header-text 0%, $header-text 100%);
   border-image-slice: 1;
   color: $header-text;
 
