--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -13,13 +13,15 @@
     // color: darken($background-color, 50%);
     color: $header-text;
     font-size: 1.3rem;
+    pointer-events: none;
 
     a {
       font-size: 1.3rem;
       transition: all 0.4s;
       display: inline-block;
-      color: $mint-color;
-      background-image: linear-gradient(to right, $mint-color, $mint-color);
+      color: #ee867b;
+      background-image: linear-gradient(to right, #ee867b, #ee867b);
+      pointer-events: all;
 
       background-size: 0% 2px;
       background-position: 0 100%;
@@ -27,7 +29,7 @@
 
       &:hover,
       &:active {
-        text-shadow: 0 0 7px $mint-color;
+        text-shadow: 0 0 7px #ee867b;
         background-size: 100% 2px;
       }
     }
@@ -37,7 +39,7 @@
     margin: 1rem auto;
     border: 0;
     width: 50%;
-    border-top: 2px solid #686868;
+    border-top: 2px solid #877aa49a;
     margin-top: 2rem;
     margin-bottom: 3rem;
   }
@@ -66,7 +68,7 @@
 }
 
 .back-to-top i {
-  color: $mint-color;
+  color: $accent-color;
   // color: #f8d2c9;
   margin: 1rem 0 $default-font-size;
   transition: all 0.2s ease-in;
