--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -4,13 +4,19 @@
   padding-top: 13rem;
 
   p {
-    color: #afafb4;
+    color: #c6bbd8;
+    text-transform: lowercase;
+    pointer-events: none;
+  }
+
+  h1 {
+    pointer-events: none;
   }
 
   hr {
     margin: 1rem auto;
     border: 0;
-    border-top: 2px solid #686868a8;
+    border-top: 2px solid #877aa49a;
     margin-top: 2rem;
     margin-bottom: 3rem;
   }
@@ -76,6 +82,7 @@
         font-weight: bold;
         margin-bottom: 1.8rem;
         font-size: $mid-font-size;
+        pointer-events: none;
 
         @include respond(phone) {
           font-size: 2rem;
@@ -84,7 +91,7 @@
       }
 
       & p > a {
-        color: $mint-color;
+        color: $accent-color;
       }
     }
 
@@ -189,7 +196,7 @@
   }
 
   .card {
-    background: #19191d;
+    background: #1c1137;
     padding: 1rem;
     height: 100%;
     margin: 0 auto;
@@ -200,7 +207,7 @@
     width: 100%;
     margin-bottom: 3rem;
     border: 2px solid;
-    border-image: linear-gradient(135deg, #2b2b31, #26262b);
+    border-image: linear-gradient(135deg, #332652, #2c1f4e);
     border-image-slice: 1;
 
     & h1 {
@@ -208,12 +215,13 @@
       margin-bottom: 1.3rem;
       color: $header-text;
       text-align: center;
+      pointer-events: none;
     }
 
     & p {
       font-size: 1.6rem;
-      margin-top: 2rem;
-      margin-bottom: 5rem;
+      font-weight: 400;
+      pointer-events: none;
     }
   }
 
