--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@
 @import "./sass/components/buttons";
 
 @import "./sass/layout/footer";
+@import "./sass/layout/navbar";
 @import "./sass/layout/sections";
 
 @import "./sass/sections/about";
