fixed site logo

--- a/src/sass/layout/_navbar.scss
+++ b/src/sass/layout/_navbar.scss
@@ -45,6 +45,10 @@
   color: $header-text;
   font-size: 3.2em;
   margin-left: 10px;
+
+  &:hover {
+    color: $header-text;
+  }
 }
 
 .github-icon {
