removed animations for now

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -80,7 +80,7 @@
 
 .cta-btn--resume {
   color: #fff;
-  background: #472f7a;
+  background: #765fbf;
   padding: 1rem 1.5rem;
   border-radius: 0.5rem;
 
@@ -102,7 +102,7 @@
 
 .cta-btn--projects {
   color: #fff;
-  background: #472f7a;
+  background: #765fbf;
   padding: 1rem 1.5rem;
   border-radius: 0.5rem;
 
