--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -45,27 +45,27 @@
   }
 }
 
-.social-links {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+// .social-links {
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: center;
 
-  a {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    color: $background-color;
-    font-size: 3rem;
-    width: 5rem;
-    height: 5rem;
-    margin: $default-font-size $default-font-size;
-    transition: all 0.2s ease-in;
+//   a {
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     color: $background-color;
+//     font-size: 3rem;
+//     width: 5rem;
+//     height: 5rem;
+//     margin: $default-font-size $default-font-size;
+//     transition: all 0.2s ease-in;
 
-    &:hover {
-      transform: translateY(-2px);
-    }
-  }
-}
+//     &:hover {
+//       transform: translateY(-2px);
+//     }
+//   }
+// }
 
 .back-to-top i {
   color: $accent-color;
