--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,12 +1,12 @@
 // COLORS
 
-$accent-color: #a68bfc;
-$background-color: #14012a;
+$accent-color: #58688b;
+$background-color: #f3f3f3;
 
 $dark-grey: #333333;
 $light-grey: #d2d2d2;
 
-$header-text: #fffdf7;
+$header-text: #181717;
 
 // FONT SIZE
 $default-font-size: 1.6rem;
