--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=JetBrains+Mono:400,700");
+@import url("https://fonts.googleapis.com/css?family=DM+Sans:400,700");
 
 h1 {
   font-weight: 700;
@@ -6,7 +6,7 @@ h1 {
 
 p,
 a {
-  font-family: "JetBrains Mono", sans-serif;
+  font-family: "DM Sans", sans-serif;
   font-size: $default-font-size;
 }
 
