--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -15,6 +15,10 @@
   right: 0;
   z-index: -1;
 
+  span {
+    font-weight: 700;
+  }
+
   @include respond(phone) {
     padding: 0rem $default-font-size;
   }
