--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -13,7 +13,7 @@
       opacity: 1;
       transition: opacity 0.16s;
     }
-    border-radius: 0.5rem;
+    border-radius: 0.87rem;
   }
 
   & i {
@@ -79,19 +79,19 @@
 }
 
 .cta-btn--resume {
-  color: #fff;
-  background: #765fbf;
+  color: #161616;
+  background: transparent;
   padding: 1rem 1.5rem;
-  border-radius: 0.5rem;
+  border-radius: 0.2rem;
+  border: #161616 solid 2px;
 
   &::after {
     opacity: 0.8;
-    border-radius: 0.5rem;
   }
 
   &:hover {
-    color: #ededed;
-    opacity: 0.8;
+    color: #747474;
+    border: #747474 solid 2px;
     text-decoration: none;
 
     &::after {
@@ -101,19 +101,19 @@
 }
 
 .cta-btn--projects {
-  color: #fff;
-  background: #765fbf;
+  color: #161616;
+  background: transparent;
   padding: 1rem 1.5rem;
-  border-radius: 0.5rem;
+  border-radius: 0.2rem;
+  border: #161616 solid 2px;
 
   &::after {
     opacity: 0.8;
-    border-radius: 0.5rem;
   }
 
   &:hover {
-    color: #ededed;
-    opacity: 0.8;
+    color: #747474;
+    border: #747474 solid 2px;
     text-decoration: none;
 
     &::after {
@@ -187,7 +187,7 @@
 
   &:hover {
     transform: translateX(2px);
-    color: #c9c9c9;
+    color: inherit;
 
     & i {
       opacity: 1;
