--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -1,33 +1,38 @@
 #about {
-  background: #17022f;
+  background: #f3f3f3;
   // background: #121214;
-  // background: #514d7d46;
   height: auto;
   color: $header-text;
   border-top: 0px;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-  padding-bottom: 28rem;
-  padding-top: 10rem;
-
-  @include respond(phone) {
-    padding-bottom: 118rem;
-  }
-
-  p {
-    color: #c6bbd8;
-    text-transform: lowercase;
-    pointer-events: none;
-  }
+  // -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+  // clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
+  padding-bottom: 15vw;
+  padding-top: 10vw;
 
   @include respond(tab-land) {
+    padding-bottom: 135rem;
     height: 100%;
     -webkit-clip-path: none;
     clip-path: none;
   }
 
+  p {
+    color: #606060;
+    pointer-events: none;
+    font-size: 2rem !important;
+  }
+
+  .link {
+    color: $accent-color;
+
+    &:hover {
+      color: $accent-color;
+      text-decoration: underline;
+    }
+  }
+
   .about-wrapper {
-    @include respond(pone) {
+    @include respond(phone) {
       padding-bottom: 5rem;
     }
 
@@ -37,7 +42,7 @@
       justify-content: center;
 
       @include respond(tab-land) {
-        height: 100%;
+        height: 500px;
       }
       @include respond(tab-port-sm) {
         padding-bottom: 3.2rem;
