--- a/src/sass/sections/_contact.scss
+++ b/src/sass/sections/_contact.scss
@@ -1,6 +1,6 @@
 #contact {
   // background: #514d7d46;
-  background: #17022f;
+  background: #f3f3f3;
   color: $header-text;
   // background-image: linear-gradient(
   //   62deg,
@@ -10,14 +10,18 @@
   -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   padding: 15rem 0 5rem 0;
-  margin-top: -10rem;
+  margin-top: -20rem;
 
   p {
-    color: #c6bbd8;
+    color: #606060;
     pointer-events: none;
   }
 
   h2 {
+    margin-bottom: 7rem;
+  }
+
+  hr {
     margin-bottom: 7rem;
   }
 
