--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -4,9 +4,9 @@
   padding-top: 13rem;
 
   p {
-    color: #c6bbd8;
-    text-transform: lowercase;
+    color: #606060;
     pointer-events: none;
+    font-size: 1.76rem;
   }
 
   h1 {
@@ -16,35 +16,34 @@
   hr {
     margin: 1rem auto;
     border: 0;
-    border-top: 2px solid #877aa49a;
+    border-top: 2px solid #616161b6;
     margin-top: 2rem;
     margin-bottom: 3rem;
   }
 
-  .react-icon {
-    width: 3.8rem;
-    margin-right: 1rem;
-    vertical-align: middle;
-  }
+  // .react-icon {
+  //   width: 3.8rem;
+  //   margin-right: 1rem;
+  //   vertical-align: middle;
+  // }
 
-  .svelte-icon {
-    width: 2rem;
-    margin-right: 1.2rem;
-    vertical-align: middle;
-  }
+  // .svelte-icon {
+  //   width: 2rem;
+  //   margin-right: 1.2rem;
+  //   vertical-align: middle;
+  // }
 
   .stack-icon {
-    width: 3.5rem;
+    width: 4.2rem;
     margin-right: 1rem;
-    margin-left: 1rem;
-    margin-bottom: 1.2rem;
-    transition: all 0.2s ease-in-out;
-    opacity: 0.8;
+    margin-bottom: 1.5rem;
+    // transition: all 0.2s ease-in-out;
+    // opacity: 0.8;
 
-    &:hover {
-      transform: scale(1.02);
-      opacity: 1;
-    }
+    // &:hover {
+    //   transform: scale(1.02);
+    //   opacity: 1;
+    // }
   }
 
   @include respond(tab-land) {
@@ -187,28 +186,21 @@
     }
   }
 
-  .card-buttons a {
-    font-size: 1.5rem;
-    margin: 0 1rem;
-    padding: 0.8rem 1.6rem;
-    text-decoration: none;
-    transition: all 0.2s ease-in-out;
-  }
-
   .card {
-    background: #1c1137;
+    background: #f6f6f6;
     padding: 1rem;
     height: 100%;
     margin: 0 auto;
     position: relative;
     overflow: hidden;
-    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.173);
     max-width: 360px;
     width: 100%;
     margin-bottom: 3rem;
-    border: 2px solid;
-    border-image: linear-gradient(135deg, #332652, #2c1f4e);
-    border-image-slice: 1;
+    // border: 2px solid;
+    // border-image: linear-gradient(135deg, #ababab, #ababab);
+    // border-image-slice: 1;
+    border-radius: 0.6rem;
 
     & h1 {
       font-size: 2.5rem;
@@ -233,6 +225,14 @@
     bottom: 1rem;
     left: 0;
     right: 0;
+
+    & a {
+      font-size: 1.5rem;
+      margin: 0 1rem;
+      padding: 0.8rem 1.6rem;
+      text-decoration: none;
+      transition: all 0.2s ease-in-out;
+    }
   }
 
   .card-image {
@@ -242,6 +242,8 @@
     object-fit: cover;
     transition: all 0.2s ease-in-out;
     margin-bottom: 2rem;
+    border-radius: 0.6rem;
+    border: solid 2px #c4c4c4ce;
 
     &:hover {
       opacity: 0.9;
