major revamp, back in use as main

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,12 +1,12 @@
 // COLORS
 
-$accent-color: #58688b;
-$background-color: #f3f3f3;
+$accent-color: #a89983;
+$background-color: #32302e;
 
-$dark-grey: #333333;
-$light-grey: #d2d2d2;
+$dark-grey: #655b53;
+$light-grey: #a89983;
 
-$header-text: #181717;
+$header-text: #907e70;
 
 // FONT SIZE
 $default-font-size: 1.6rem;
