--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -29,6 +29,7 @@ a:hover {
   font-weight: bold;
   padding-top: 2rem;
   pointer-events: none;
+  color: $light-grey;
 
   @include respond(phone) {
     font-size: 2.8rem;
