--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -34,17 +34,19 @@
 }
 
 .cta-btn--hero {
-  @include supportColorForIE11();
-  border: 2px solid transparent;
-  border-image: linear-gradient(62deg, $accent-color 0%, $accent-color 100%);
-
-  border-image-slice: 1;
-  @include supportIE11() {
-    color: $accent-color !important;
-    &:hover {
-      color: $background-color !important;
-    }
-  }
+  // @include supportColorForIE11();
+  // border: 2px solid transparent;
+  // border-image: linear-gradient(62deg, $accent-color 0%, $accent-color 100%);
+  //
+  // border-image-slice: 1;
+  // @include supportIE11() {
+  //   color: $accent-color !important;
+  //   &:hover {
+  //     color: $background-color !important;
+  //   }
+  background-image: none;
+  border: 2px solid $accent-color;
+  -webkit-text-fill-color: $accent-color;
 
   @include respond(phone) {
     background-image: none;
@@ -78,20 +80,42 @@
   }
 }
 
-.cta-btn--resume {
-  color: #161616;
+// .cta-btn--resume {
+//   color: $accent-color;
+//   background: transparent;
+//   padding: 1rem 1.5rem;
+//   border-radius: 0.2rem;
+//   border: $accent-color solid 2px;
+//
+//   &::after {
+//     opacity: 0.8;
+//   }
+//
+//   &:hover {
+//     color: #a89983;
+//     border: #a89983 solid 2px;
+//     text-decoration: none;
+//
+//     &::after {
+//       width: 100%;
+//     }
+//   }
+// }
+
+.cta-btn--main {
+  color: $accent-color;
   background: transparent;
   padding: 1rem 1.5rem;
   border-radius: 0.2rem;
-  border: #161616 solid 2px;
+  border: $accent-color solid 2px;
 
   &::after {
     opacity: 0.8;
   }
 
   &:hover {
-    color: #747474;
-    border: #747474 solid 2px;
+    color: #a89983;
+    border: #a89983 solid 2px;
     text-decoration: none;
 
     &::after {
@@ -100,102 +124,80 @@
   }
 }
 
-.cta-btn--projects {
-  color: #161616;
-  background: transparent;
-  padding: 1rem 1.5rem;
-  border-radius: 0.2rem;
-  border: #161616 solid 2px;
-
-  &::after {
-    opacity: 0.8;
-  }
-
-  &:hover {
-    color: #747474;
-    border: #747474 solid 2px;
-    text-decoration: none;
-
-    &::after {
-      width: 100%;
-    }
-  }
-}
-
-.notable-mentions-live-btn {
-  display: inline-block;
-  position: relative;
-  padding: 0.8rem $default-font-size;
-  font-weight: bold;
-  line-height: 1;
-  z-index: 1;
-  border: 2px solid transparent;
-  border-image-slice: 1;
-  color: $header-text;
-
-  &::after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 0px;
-    height: 100%;
-    left: 0;
-    bottom: 0;
-    z-index: -1;
-    transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.4s;
-    background-image: linear-gradient(62deg, $header-text, $header-text 100%);
-    border-radius: 0.5rem;
-  }
-
-  &:hover {
-    -webkit-text-fill-color: $background-color;
-    text-decoration: none;
-    color: #ffffff;
-
-    &::after {
-      width: 100%;
-    }
-  }
-}
-
-.notable-mentions-source-btn {
-  display: inline-block;
-  position: relative;
-  padding: 0.8rem $default-font-size;
-  font-weight: bold;
-  line-height: 1;
-  z-index: 1;
-  transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.6s;
-  color: $header-text;
-
-  &::after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 0px;
-    height: 100%;
-    left: 0;
-    bottom: 0;
-    z-index: -1;
-    transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.3s;
-  }
-
-  & i {
-    opacity: 0;
-    transition: opacity 0.3s;
-  }
-
-  &:hover {
-    transform: translateX(2px);
-    color: inherit;
-
-    & i {
-      opacity: 1;
-    }
-  }
-
-  @include respond(phone) {
-    background-image: none;
-    -webkit-text-fill-color: $header-text;
-  }
-}
+// .notable-mentions-live-btn {
+//   display: inline-block;
+//   position: relative;
+//   padding: 0.8rem $default-font-size;
+//   font-weight: bold;
+//   line-height: 1;
+//   z-index: 1;
+//   border: 2px solid transparent;
+//   border-image-slice: 1;
+//   color: $header-text;
+//
+//   &::after {
+//     content: "";
+//     display: block;
+//     position: absolute;
+//     width: 0px;
+//     height: 100%;
+//     left: 0;
+//     bottom: 0;
+//     z-index: -1;
+//     transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.4s;
+//     background-image: linear-gradient(62deg, $header-text, $header-text 100%);
+//     border-radius: 0.5rem;
+//   }
+//
+//   &:hover {
+//     -webkit-text-fill-color: $background-color;
+//     text-decoration: none;
+//     color: #ffffff;
+//
+//     &::after {
+//       width: 100%;
+//     }
+//   }
+// }
+//
+// .notable-mentions-source-btn {
+//   display: inline-block;
+//   position: relative;
+//   padding: 0.8rem $default-font-size;
+//   font-weight: bold;
+//   line-height: 1;
+//   z-index: 1;
+//   transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.6s;
+//   color: $header-text;
+//
+//   &::after {
+//     content: "";
+//     display: block;
+//     position: absolute;
+//     width: 0px;
+//     height: 100%;
+//     left: 0;
+//     bottom: 0;
+//     z-index: -1;
+//     transition: all cubic-bezier(0.19, 1, 0.22, 1) 0.3s;
+//   }
+//
+//   & i {
+//     opacity: 0;
+//     transition: opacity 0.3s;
+//   }
+//
+//   &:hover {
+//     transform: translateX(2px);
+//     color: inherit;
+//
+//     & i {
+//       opacity: 1;
+//     }
+//   }
+//
+//   @include respond(phone) {
+//     background-image: none;
+//     -webkit-text-fill-color: $header-text;
+//   }
+// }
