--- a/src/sass/layout/_navbar.scss
+++ b/src/sass/layout/_navbar.scss
@@ -3,8 +3,9 @@
   top: 0;
   right: 0;
   width: 100%;
-  height: 60px;
-  background-color: transparent;
+  height: 80px;
+  background-color: #3c3735;
+  border-bottom: #655b53 solid 1.5px;
   z-index: 999;
   transition: background-color 0.3s ease-in-out;
   display: flex;
@@ -35,8 +36,8 @@
 }
 
 .navbar.navbar-solid {
-  background-color: #f9f9f9e8;
-  border-bottom: #41414226 solid 2px;
+  background-color: #3c3836 !important;
+  border-bottom: #32302e solid 2px;
 }
 
 .site-logo {
@@ -48,7 +49,7 @@
   margin-left: 10px;
 
   &:hover {
-    color: inherit;
+    color: $accent-color;
   }
 }
 
