--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -1,25 +1,24 @@
 #about {
-  background: #f3f3f3;
-  // background: #121214;
+  background: $background-color;
   height: auto;
   color: $header-text;
   border-top: 0px;
   // -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   // clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-  padding-bottom: 10vw;
-  padding-top: 10vw;
+  padding-bottom: 13vw;
+  padding-top: 5vw;
 
   @include respond(tab-land) {
-    padding-bottom: 135rem;
-    height: 100%;
+    padding-bottom: 10rem;
+    // height: 100%;
     -webkit-clip-path: none;
     clip-path: none;
   }
 
   p {
-    color: #606060;
+    color: #907e70;
     pointer-events: none;
-    font-size: 2rem !important;
+    font-size: 1.8rem !important;
   }
 
   img {
@@ -27,17 +26,17 @@
   }
 
   .link {
-    color: $accent-color;
+    color: #c5b18d;
+    pointer-events: all;
 
     &:hover {
-      color: $accent-color;
       text-decoration: underline;
     }
   }
 
   .about-wrapper {
     @include respond(phone) {
-      padding-bottom: 5rem;
+      padding-bottom: 2rem;
     }
 
     &__image {
