--- a/src/sass/sections/_contact.scss
+++ b/src/sass/sections/_contact.scss
@@ -1,6 +1,6 @@
 #contact {
   // background: #514d7d46;
-  background: #f3f3f3;
+  background: $background-color;
   color: $header-text;
   // background-image: linear-gradient(
   //   62deg,
@@ -10,15 +10,15 @@
   -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
   padding: 15rem 0 5rem 0;
-  margin-top: -20rem;
+  // margin-top: -20rem;
 
   p {
-    color: #606060;
+    color: $header-text;
     pointer-events: none;
   }
 
   h2 {
-    margin-bottom: 7rem;
+    // margin-bottom: 7rem;
   }
 
   hr {
@@ -26,19 +26,19 @@
   }
 
   @include respond(tab-land) {
-    padding: 10rem 0;
+    // padding: 10rem 0;
     clip-path: none;
     margin-top: 0;
     -webkit-clip-path: none;
   }
 
   .contact-wrapper {
-    margin-top: 3.2rem;
+    // margin-top: 3.2rem;
     padding: 0 2rem;
     backface-visibility: hidden;
 
     &__text {
-      margin-bottom: 2.5rem;
+      // margin-bottom: 2.5rem;
     }
 
     &__text,
