--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -15,6 +15,11 @@
     clip-path: none;
   }
 
+  @media (min-width: 1200px) {
+    padding-bottom: 17vw;
+    padding-top: 10vw;
+  }
+
   p {
     color: #907e70;
     pointer-events: none;
