--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -7,6 +7,8 @@
     color: #907e70;
     pointer-events: none;
     font-size: 1.76rem;
+    padding-bottom: 0
+
   }
 
   h1 {
@@ -35,6 +37,8 @@
 
     &__text {
       text-align: left;
+      position: relative; /* Establish positioning context */
+      padding-right: 20px; /* Add padding to avoid overlap with the hr */
 
       @include respond(phone) {
         margin-bottom: 2.5rem !important;
@@ -133,100 +137,101 @@
       vertical-align: middle;
     }
   }
+}
 
-  .notable-mentions-title {
-    font-size: 4rem;
-    margin-bottom: 6rem;
-    margin-top: 8rem;
-  }
+  // .notable-mentions-title {
+  //   font-size: 4rem;
+  //   margin-bottom: 6rem;
+  //   margin-top: 8rem;
+  // }
 
-  .notable-mentions-list {
-    list-style: none;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
-    grid-gap: 3rem;
-    padding: 2.5rem;
-    justify-content: center;
-    padding-bottom: 12rem;
-    max-width: 1200px;
-    margin: 0 auto;
+  // .notable-mentions-list {
+  //   list-style: none;
+  //   display: grid;
+  //   grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
+  //   grid-gap: 3rem;
+  //   padding: 2.5rem;
+  //   justify-content: center;
+  //   padding-bottom: 12rem;
+  //   max-width: 1200px;
+  //   margin: 0 auto;
+  //
+  //   @media (max-width: 900px) {
+  //     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  //   }
+  // }
 
-    @media (max-width: 900px) {
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    }
-  }
-
-  .card {
-    background: #f6f6f6;
-    padding: 1rem;
-    height: 100%;
-    margin: 0 auto;
-    position: relative;
-    overflow: hidden;
-    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.173);
-    max-width: 360px;
-    width: 100%;
-    margin-bottom: 3rem;
+  // .card {
+  //   background: #f6f6f6;
+  //   padding: 1rem;
+  //   height: 100%;
+  //   margin: 0 auto;
+  //   position: relative;
+  //   overflow: hidden;
+  //   box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.173);
+  //   max-width: 360px;
+  //   width: 100%;
+  //   margin-bottom: 3rem;
     // border: 2px solid;
     // border-image: linear-gradient(135deg, #ababab, #ababab);
     // border-image-slice: 1;
-    border-radius: 0.6rem;
+  //   border-radius: 0.6rem;
+  //
+  //   & h1 {
+  //     font-size: 2.5rem;
+  //     margin-bottom: 1.3rem;
+  //     color: $header-text;
+  //     text-align: center;
+  //     pointer-events: none;
+  //   }
+  //
+  //   & p {
+  //     font-size: 1.6rem;
+  //     font-weight: 400;
+  //     pointer-events: none;
+  //   }
+  // }
 
-    & h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1.3rem;
-      color: $header-text;
-      text-align: center;
-      pointer-events: none;
-    }
+  // .card-buttons {
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  //   position: absolute;
+  //   bottom: 1rem;
+  //   left: 0;
+  //   right: 0;
+  //
+  //   & a {
+  //     font-size: 1.5rem;
+  //     margin: 0 1rem;
+  //     padding: 0.8rem 1.6rem;
+  //     text-decoration: none;
+  //     transition: all 0.2s ease-in-out;
+  //   }
+  // }
 
-    & p {
-      font-size: 1.6rem;
-      font-weight: 400;
-      pointer-events: none;
-    }
-  }
-
-  .card-buttons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    bottom: 1rem;
-    left: 0;
-    right: 0;
-
-    & a {
-      font-size: 1.5rem;
-      margin: 0 1rem;
-      padding: 0.8rem 1.6rem;
-      text-decoration: none;
-      transition: all 0.2s ease-in-out;
-    }
-  }
-
-  .card-image {
-    width: 100%;
-    height: 210px;
-    border-radius: 4px;
-    object-fit: cover;
-    transition: all 0.2s ease-in-out;
-    margin-bottom: 2rem;
-    border-radius: 0.6rem;
-    border: solid 2px #c4c4c4ce;
-
-    &:hover {
-      opacity: 0.9;
-      transform: scale(1.009);
-    }
-  }
-
-  @include respond(phone) {
-    .notable-mentions-list {
-      grid-gap: 2.5rem;
-    }
-  }
-}
+//   .card-image {
+//     width: 100%;
+//     height: 210px;
+//     border-radius: 4px;
+//     object-fit: cover;
+//     transition: all 0.2s ease-in-out;
+//     margin-bottom: 2rem;
+//     border-radius: 0.6rem;
+//     border: solid 2px #c4c4c4ce;
+//
+//     &:hover {
+//       opacity: 0.9;
+//       transform: scale(1.009);
+//     }
+//   }
+//
+//   @include respond(phone) {
+//     .notable-mentions-list {
+//       grid-gap: 2.5rem;
+//     }
+//   }
+// }
 
 .spacer {
   margin-top: 8.4rem;
