--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,12 +1,13 @@
 // COLORS
 
+// Gruvbox-ish
 $accent-color: #a89983;
 $background-color: #32302e;
-
+$navbar-color: #3c3836;
 $dark-grey: #655b53;
 $light-grey: #a89983;
-
-$header-text: #907e70;
+$header-text: #9e8b7b;
+$header-text: #9e8b7b;
 
 // FONT SIZE
 $default-font-size: 1.6rem;
