--- a/src/sass/layout/_navbar.scss
+++ b/src/sass/layout/_navbar.scss
@@ -5,7 +5,7 @@
   width: 100%;
   height: 80px;
   // background-color: #3c3735;
-  background-color: #3c3836;
+  background-color: $navbar-color;
   border-bottom: #655b53 solid 1.5px;
   z-index: 999;
   transition: background-color 0.3s ease-in-out;
