--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -114,8 +114,8 @@
   }
 
   &:hover {
-    color: #a89983;
-    border: #a89983 solid 2px;
+    color: $accent-color;
+    border: $accent-color solid 2px;
     text-decoration: none;
     border-radius: 1.8rem;
 
