--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -21,7 +21,7 @@
   }
 
   p {
-    color: #907e70;
+    // color: $foreground-color;
     pointer-events: none;
     font-size: 1.8rem !important;
   }
