--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -4,7 +4,7 @@
   padding-bottom: 0rem;
 
   p {
-    color: #907e70;
+    color: $header-text;
     pointer-events: none;
     font-size: 1.76rem;
     padding-bottom: 0
