--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,13 +1,13 @@
 // COLORS
 
 // Gruvbox-ish
-$accent-color: #a89983;
-$background-color: #32302e;
-$navbar-color: #3c3836;
+$accent-color: #68948a;
+$background-color: #32302f;
+$foreground-color: #ebdbb2;
+$navbar-color: #242423;
 $dark-grey: #655b53;
-$light-grey: #a89983;
-$header-text: #9e8b7b;
-$header-text: #9e8b7b;
+$light-grey: #ebdbb2;
+$header-text: #ddc7a1;
 
 // FONT SIZE
 $default-font-size: 1.6rem;
