--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -15,10 +15,9 @@
     pointer-events: none;
 
     a {
+      color: $foreground-color;
       font-size: 1.6rem;
-      transition: all 0.4s;
       display: inline-block;
-      color: $accent-color;
       pointer-events: all;
 
       &:hover,
@@ -70,9 +69,8 @@
   cursor: pointer;
 
   &:hover {
-    transform: translateY(-2px);
-    color: $accent-color;
-    // opacity: 0.7;
+    transform: translateY(-5px);
+    opacity: 0.7;
   }
 }
 
