--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -6,7 +6,7 @@
   border-bottom: 0px;
 
   font-weight: 400;
-  color: $header-text;
+  color: $foreground-color;
   padding: 0rem 5.6rem;
   margin-bottom: 0;
   top: 0;
