--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,13 +1,22 @@
 // COLORS
 
 // Gruvbox-ish
-$accent-color: #baa697;
-$background-color: #32302f;
-$foreground-color: #ebdbb2;
-$navbar-color: #242423;
-$dark-grey: #655b53;
-$light-grey: #ebdbb2;
-$header-text: #ddc7a1;
+// $accent-color: #83a497;
+// $background-color: #32302f;
+// $foreground-color: #ebdbb2;
+// $navbar-color: #242423;
+// $dark-grey: #655b53;
+// $light-grey: #ebdbb2;
+// $header-text: #ddc7a1;
+
+// Dark
+$accent-color: #83a497;
+$background-color: #0c0c0c;
+$foreground-color: #eceef3;
+$navbar-color: #0c0c0c;
+$dark-grey: #b9bcc0;
+$light-grey: #b9bcc0;
+$header-text: #eceef3;
 
 // FONT SIZE
 $default-font-size: 1.6rem;
