--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -15,7 +15,7 @@
     pointer-events: none;
 
     a {
-      color: $foreground-color;
+      color: $accent-color;
       font-size: 1.6rem;
       display: inline-block;
       pointer-events: all;
