--- a/src/sass/sections/_about.scss
+++ b/src/sass/sections/_about.scss
@@ -1,7 +1,7 @@
 #about {
   background: $background-color;
   height: auto;
-  color: $header-text;
+  color: $dark-grey;
   border-top: 0px;
   // -webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   // clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
