--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -29,7 +29,7 @@ a:hover {
   font-weight: bold;
   padding-top: 2rem;
   pointer-events: none;
-  color: $light-grey;
+  color: $header-text;
 
   @include respond(phone) {
     font-size: 2.8rem;
