--- a/src/sass/sections/_projects.scss
+++ b/src/sass/sections/_projects.scss
@@ -4,7 +4,7 @@
   padding-bottom: 0rem;
 
   p {
-    color: $header-text;
+    color: $dark-grey;
     pointer-events: none;
     font-size: 1.76rem;
     padding-bottom: 0
@@ -37,8 +37,8 @@
 
     &__text {
       text-align: left;
-      position: relative; /* Establish positioning context */
-      padding-right: 20px; /* Add padding to avoid overlap with the hr */
+      position: relative;
+      padding-right: 20px;
 
       @include respond(phone) {
         margin-bottom: 2.5rem !important;
@@ -53,7 +53,7 @@
         margin-bottom: 1.8rem;
         font-size: $mid-font-size;
         pointer-events: none;
-        color: $light-grey;
+        color: $header-text;
 
 
         @include respond(phone) {
