--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -28,14 +28,9 @@
     }
   }
 
-  // & hr {
-  //   margin: 1rem auto;
-  //   border: 0;
-  //   width: 50%;
-  //   border-top: 2px solid #877aa49a;
-  //   margin-top: 2rem;
-  //   margin-bottom: 3rem;
-  // }
+  & hr {
+    width: 100%;
+  }
 }
 
 // .social-links {
